--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,19 @@
   "license": "GPL-3.0",
   "private": true,
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/index.js",
+    "start:watch": "ts-node-dev --respawn ./src/index.ts"
   },
   "devDependencies": {
     "@types/cbor": "^5.0.1",
     "@types/node": "^14.10.1",
     "@types/ws": "^7.2.6",
+    "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "cbor": "^5.1.0",
+    "hyperswarm": "^2.15.1",
     "ws": "^7.3.1"
   }
 }
