--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "cbor": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.19.0",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -38,6 +36,12 @@
     ]
   },
   "devDependencies": {
-    "@types/cbor": "^5.0.1"
+    "@types/cbor": "^5.0.1",
+    "@types/styled-components": "^5.1.3",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "react-query-devtools": "^2.4.7"
   }
 }
