--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "license": "GPL-3.0",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -9,7 +10,6 @@
     "cbor": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-query": "^2.19.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
@@ -41,7 +41,6 @@
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "react-query-devtools": "^2.4.7"
+    "@types/react-dom": "^16.9.0"
   }
 }
