--- a/cli/package.json
+++ b/cli/package.json
@@ -7,18 +7,18 @@
   "main": "dist/cli.js",
   "bin": "cli.js",
   "scripts": {
-    "build:backend": "cd ../backend && yarn build",
-    "build": "yarn build:backend && cp -r ../backend/dist/* ./dist/ && yarn tsc ",
+    "build": "tsc",
     "start": "yarn build && node dist/cli.js"
+  },
+  "dependencies": {
+    "cbor": "^5.1.0",
+    "hyperswarm": "^2.15.1",
+    "p2p-network-tools-node-nodejs": "0.0.0"
   },
   "devDependencies": {
     "@types/cbor": "^5.0.1",
     "@types/node": "^14.10.1",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
-  },
-  "dependencies": {
-    "cbor": "^5.1.0",
-    "hyperswarm": "^2.15.1"
   }
 }
