--- a/desktop-explorer-electron/package.json
+++ b/desktop-explorer-electron/package.json
@@ -13,6 +13,14 @@
     "release": "yarn && tsc && electron-builder --publish=always",
     "test": "jest"
   },
+  "dependencies": {
+    "cbor": "^5.1.0",
+    "emotion": "^10.0.27",
+    "hyperswarm": "^2.15.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "p2p-network-tools-node-nodejs": "0.0.0"
+  },
   "devDependencies": {
     "@types/cbor": "^5.0.1",
     "@types/jest": "^26.0.14",
@@ -34,13 +42,6 @@
     "jest": "^26.4.2",
     "ts-jest": "^26.4.0",
     "typescript": "^4.0.3"
-  },
-  "dependencies": {
-    "cbor": "^5.1.0",
-    "emotion": "^10.0.27",
-    "hyperswarm": "^2.15.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
   },
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
