nicer gui for electron explorer

--- a/desktop-explorer-electron/tsconfig.json
+++ b/desktop-explorer-electron/tsconfig.json
@@ -10,7 +10,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "incremental": true
   },
   "references": [{ "path": "../backend" }]
 }
