--- a/desktop-explorer-electron/tsconfig.json
+++ b/desktop-explorer-electron/tsconfig.json
@@ -11,7 +11,8 @@
     "sourceMap": true,
     "strict": true,
     "isolatedModules": true,
-    "incremental": true
+    "incremental": true,
+    "lib": ["dom"]
   },
   "references": [{ "path": "../backend" }]
 }
