fix: source-maps

--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -8,10 +8,11 @@
     "moduleResolution": "Node",
     "target": "ES6",
     "skipLibCheck": true,
-    "sourceMap": true,
     "strict": true,
     "isolatedModules": true,
     "incremental": true,
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext", "DOM"],
+    "inlineSourceMap": true,
+    "inlineSources": true
   }
 }
