--- a/flood-desktop/package.json
+++ b/flood-desktop/package.json
@@ -12,9 +12,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
     "cbor": "^5.1.0",
     "emotion": "^10.0.27",
     "hyperswarm": "^2.15.2",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
